fix card spacing

--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ header {
   border-bottom: 2px solid black;
 }
 
+/* Main */
+main {
+  padding: 15px 25px;
+  /* border: 1px dotted #323232; */
+}
+
 /* Main Cards */
 .card {
   padding: 20px 15px;
